--- a/src/App.css
+++ b/src/App.css
@@ -172,3 +172,24 @@ body, .app {
   text-align: center;
   font-size: 0.8em;
 }
+
+/* Credits: https://gist.github.com/tracend/8553152 */
+.spinner {
+	/* with no content, nothing is rendered */
+	content: "";
+	position: fixed;
+	/* element stretched to cover during rotation an aspect ratio up to 1/10 */
+	top: -500%;
+	left: -500%;
+	right: -500%;
+	bottom: -500%;
+	z-index: 9999;
+	pointer-events: none; /* to block content use: all */
+	/* background */
+	background-color: rgba(0,0,0,0.6);
+	background-image: url(/images/spinner.gif);
+	background-repeat: no-repeat;
+	background-position: center center;
+	background-size: 100px 100px;
+
+}
